--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -23,31 +23,4 @@ project(robot-fw C CXX ASM)
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Add executable. Default name is the project name, version 0.1
-
-add_executable(robot-fw src/main.c )
-
-pico_set_program_name(robot-fw "robot-fw")
-pico_set_program_version(robot-fw "0.1")
-
-pico_enable_stdio_uart(robot-fw 1)
-pico_enable_stdio_usb(robot-fw 0)
-
-# Add the standard library to the build
-target_link_libraries(robot-fw
-        pico_stdlib)
-
-# Add the standard include files to the build
-target_include_directories(robot-fw PRIVATE
-  ${CMAKE_CURRENT_LIST_DIR}
-  ${CMAKE_CURRENT_LIST_DIR}/src
-  ${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts or any other standard includes, if required
-)
-
-# Add any user requested libraries
-target_link_libraries(robot-fw
-        pico_cyw43_arch_lwip_poll
-        )
-
-pico_add_extra_outputs(robot-fw)
-
+add_subdirectory(src)
